--- a/config/content.htm
+++ b/config/content.htm
@@ -150,7 +150,7 @@ var viewer3d;
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part2-1.stl">模型1</a> <!-- 第一題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part15.stl">模型1</a> <!-- 第一題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1"></div>
 <script type="text/javascript">
@@ -245,8 +245,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h2>Bearing block A</h2>
+</script><h2>Bearing block A</h2>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
