--- a/content/Base Plate.html
+++ b/content/Base Plate.html
@@ -145,7 +145,7 @@ img.add_border {
 <p></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part2-1.stl">模型1</a> <!-- 第一題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part15.stl">模型1</a> <!-- 第一題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1"></div>
 <script type="text/javascript">
@@ -240,8 +240,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<br />練習 << <a href='練習.html'>Previous</a> <a href='Bearing block A.html'>Next</a> >> Bearing block A</div>
+</script><br />練習 << <a href='練習.html'>Previous</a> <a href='Bearing block A.html'>Next</a> >> Bearing block A</div>
         
     <!-- footer -->
       <div class="container">
