--- a/config/content.htm
+++ b/config/content.htm
@@ -1164,7 +1164,14 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>   <span> </span><span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p>
 <p></p>
 <h2>w11_hw</h2>
-<p>ZIP檔案:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a></p>
+<p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
+<p>ZIP檔案:<a href="/downloads/41223131_p2.zip">/downloads/41223131_p1.zip</a></p>
+<p>           <a href="/downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a></p>
+<p>          <a href="/downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a> </p>
+<p>          <a href="/downloads/41223131_p4.zip">/downloads/41223131_p4.zip</a></p>
+<p>          <a href="/downloads/41223131_p5.zip">/downloads/41223131_p5.zip</a></p>
+<p>         <a href="/downloads/41223150_p6.zip">/downloads/41223150_p6.zip</a></p>
+<p>        <a href="/downloads/41223150_p7.zip">/downloads/41223150_p7.zip</a></p>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
