--- a/content/w11_hw.html
+++ b/content/w11_hw.html
@@ -142,7 +142,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>w11_hw</h1>
-<p>ZIP檔案:<a href="./../downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a></p>
+<p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
+<p>ZIP檔案:<a href="./../downloads/41223131_p2.zip">/downloads/41223131_p1.zip</a></p>
+<p>           <a href="./../downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a></p>
+<p>          <a href="./../downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a> </p>
+<p>          <a href="./../downloads/41223131_p4.zip">/downloads/41223131_p4.zip</a></p>
+<p>          <a href="./../downloads/41223131_p5.zip">/downloads/41223131_p5.zip</a></p>
+<p>         <a href="./../downloads/41223150_p6.zip">/downloads/41223150_p6.zip</a></p>
+<p>        <a href="./../downloads/41223150_p7.zip">/downloads/41223150_p7.zip</a></p>
 <p></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
