--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1164,7 +1164,14 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>   <span> </span><span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p>
 <p></p>
 <h2>w11_hw</h2>
-<p>ZIP檔案:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a></p>
+<p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
+<p>ZIP檔案:<a href="/downloads/41223131_p2.zip">/downloads/41223131_p1.zip</a></p>
+<p>           <a href="/downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a></p>
+<p>          <a href="/downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a> </p>
+<p>          <a href="/downloads/41223131_p4.zip">/downloads/41223131_p4.zip</a></p>
+<p>          <a href="/downloads/41223131_p5.zip">/downloads/41223131_p5.zip</a></p>
+<p>         <a href="/downloads/41223150_p6.zip">/downloads/41223150_p6.zip</a></p>
+<p>        <a href="/downloads/41223150_p7.zip">/downloads/41223150_p7.zip</a></p>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -1231,7 +1238,9 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h1>HW1</h1>
+</script>
+<h3>W11影片連結</h3>
+<p>Plongeur Batteur_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="995"></iframe> Piece composite_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/QWP-TaXBwbk" title="W11 _2" width="1020"></iframe> Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p><h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
