--- a/config/content.htm
+++ b/config/content.htm
@@ -65,7 +65,8 @@
 <p>6.若成功之後在新分頁輸入如下修改小部分即可開啟:<a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl"></a></p>
 <p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
 <p>7.開啟老師給html的程式碼並且在裡面如上面修改成自己的html網站網址，把code放置在自己網站中即可完成。</p>
-<p></p><h3>練習</h3>
+<p></p>
+<h3>練習</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
 <p></p>
@@ -1177,6 +1178,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p></p>
 <h2>w11_hw</h2>
 <p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
+<p>我的影片網站連結:<a href="https://mdecad2024.github.io/hw-yuhao-08/content/W11%E5%BD%B1%E7%89%87%E9%80%A3%E7%B5%90.html">41223131</a></p>
 <p>ZIP檔案:<a href="/downloads/41223131_p2.zip">/downloads/41223131_p1.zip</a></p>
 <p>           <a href="/downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a></p>
 <p>          <a href="/downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a> </p>
@@ -1250,12 +1252,16 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>W11影片連結</h3>
+</script><h3>W11影片連結</h3>
 <p>Plongeur Batteur_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="995"></iframe></p>
 <p>Piece composite_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/QWP-TaXBwbk" title="W11 _2" width="1020"></iframe></p>
 <p>Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p>
-<p>Support Bobine_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/lx7tAc5LZXI" title="SolveSpace   new sketch 2024 11 30 00 53 38" width="1020"></iframe></p><h1>HW1</h1>
+<p>Support Bobine_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/lx7tAc5LZXI" title="SolveSpace   new sketch 2024 11 30 00 53 38" width="1020"></iframe></p>
+<h2>W12_ch</h2>
+<p>1.檢查作業: <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w7.html">w7</a></p>
+<p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10.html">w10</a></p>
+<p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w11_hw.html">w11</a></p>
+<h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
@@ -1291,7 +1297,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part12.stl">模型1</a> <!-- 第一題的模型 --></div>
 <!-- 動態生成的模型部分 -->
-<div id="modelParts1"></div>
+<div id="modelParts1"><a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10NX.html">嘗試利用NX來繪圖考試連結</a></div>
 <script type="text/javascript">
 // 函數用來動態生成模型部件
 function createModelPart(index, url, ytUrl, title) {
@@ -1384,8 +1390,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>w10NX</h3>
+</script><h3>w10NX</h3>
 <p>W10的考試利用NX來畫並且測試</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/sl3TUBU5-rI" title="W10 NX的操作影片" width="956"></iframe></p>
 <h1>HW2</h1>
