--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -43,6 +43,19 @@
 <p><span>網路(google):</span></p>
 <p><span><a href="https://blog.csdn.net/gitblog_00264/article/details/141452063">分析solvespaces的職場功用和能力</a></span></p>
 <h2>w7</h2>
+<p><span style="color: #003300;"><span style="text-decoration: underline;"><span>Sovespaces</span></span>的操作零件頁面</span>:</p>
+<p><span>①</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/%E7%B7%B4%E7%BF%92.html">練習</a></p>
+<p><span>②</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Base%20Plate.html">Base Plate</a></p>
+<p><span>③</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20A.html">Bearing block A</a></p>
+<p><span>④</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20B.html">Bearing block B</a></p>
+<p><span>⑤</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20bracket.html">Dovetail bracket</a></p>
+<p><span>⑥</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20stop.html">Dovetail stop</a></p>
+<p><span>⑦</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Gland%20blank.html">Gland blank</a></p>
+<p><span>⑧</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Gland.html">Gland</a></p>
+<p><span>⑨</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Giude%20plate.html">Giude plate</a></p>
+<p><span>⑩</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Head%20attachment.html">Head attachment</a></p>
+<p><span>⑪</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Head%20yoke.html">Head yoke</a></p>
+<p>操作步驟:</p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span style="text-decoration: underline;">File</span> 中找到<span style="text-decoration: underline;"> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名為 412231XX_part1.stl</p>
@@ -1165,6 +1178,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p></p>
 <h2>w11_hw</h2>
 <p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
+<p>我的影片網站連結:<a href="https://mdecad2024.github.io/hw-yuhao-08/content/W11%E5%BD%B1%E7%89%87%E9%80%A3%E7%B5%90.html">41223131</a></p>
 <p>ZIP檔案:<a href="/downloads/41223131_p2.zip">/downloads/41223131_p1.zip</a></p>
 <p>           <a href="/downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a></p>
 <p>          <a href="/downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a> </p>
@@ -1238,12 +1252,16 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>W11影片連結</h3>
+</script><h3>W11影片連結</h3>
 <p>Plongeur Batteur_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="995"></iframe></p>
 <p>Piece composite_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/QWP-TaXBwbk" title="W11 _2" width="1020"></iframe></p>
 <p>Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p>
-<p>Support Bobine_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/lx7tAc5LZXI" title="SolveSpace   new sketch 2024 11 30 00 53 38" width="1020"></iframe></p><h1>HW1</h1>
+<p>Support Bobine_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/lx7tAc5LZXI" title="SolveSpace   new sketch 2024 11 30 00 53 38" width="1020"></iframe></p>
+<h2>W12_ch</h2>
+<p>1.檢查作業: <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w7.html">w7</a></p>
+<p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10.html">w10</a></p>
+<p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w11_hw.html">w11</a></p>
+<h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
