--- a/content/W12_ch.html
+++ b/content/W12_ch.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,12 +141,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w11_hw << <a href='w11_hw.html'>Previous</a> <a href='W12_ch.html'>Next</a> >> W12_ch<br /><h1>W11影片連結</h1>
-<p>Plongeur Batteur_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="995"></iframe></p>
-<p>Piece composite_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/QWP-TaXBwbk" title="W11 _2" width="1020"></iframe></p>
-<p>Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p>
-<p>Support Bobine_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/lx7tAc5LZXI" title="SolveSpace   new sketch 2024 11 30 00 53 38" width="1020"></iframe></p>
-<br />w11_hw << <a href='w11_hw.html'>Previous</a> <a href='W12_ch.html'>Next</a> >> W12_ch</div>
+    <div id="tipue_search_content">W11影片連結 << <a href='W11影片連結.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W12_ch</h1>
+<p>1.檢查作業: <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w7.html">w7</a></p>
+<p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10.html">w10</a></p>
+<p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w11_hw.html">w11</a></p>
+<br />W11影片連結 << <a href='W11影片連結.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
