--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1245,7 +1245,9 @@ function initModelParts() {
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
-<p>組合操作影片: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xfiuIVr7FDY" title="W11 NX組合影片" width="956"></iframe></p><h3>W11影片連結</h3>
+<p>組合操作影片: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xfiuIVr7FDY" title="W11 NX組合影片" width="956"></iframe></p>
+<p>螢幕截圖如下:</p>
+<p><img alt="" height="281" src="/images/螢幕截圖.png" width="501"/></p><h3>W11影片連結</h3>
 <p>Plongeur Batteur_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="995"></iframe></p>
 <p>Piece composite_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/QWP-TaXBwbk" title="W11 _2" width="1020"></iframe></p>
 <p>Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p>
