--- a/content/W12_ch.html
+++ b/content/W12_ch.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li><a href='w9.html'>w9</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='W11影片連結.html'>W11影片連結</a></li></ul><li><a href='W12_ch.html'>W12_ch</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10NX.html'>w10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li><a href='w9.html'>w9</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='W11影片連結.html'>W11影片連結</a><li><a href='w11組合影片.html'>w11組合影片</a></li></ul><li><a href='W12_ch.html'>W12_ch</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10NX.html'>w10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,11 +141,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W11影片連結 << <a href='W11影片連結.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W12_ch</h1>
+    <div id="tipue_search_content">w11組合影片 << <a href='w11組合影片.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W12_ch</h1>
 <p>1.檢查作業: <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w7.html">w7</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10.html">w10</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w11_hw.html">w11</a></p>
-<p></p><br />W11影片連結 << <a href='W11影片連結.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+<p></p>
+<br />w11組合影片 << <a href='w11組合影片.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
